fixed header alignment

--- a/img-colour-picker/styles.scss
+++ b/img-colour-picker/styles.scss
@@ -17,6 +17,7 @@
             background-color: orangered;
             padding:15px;
             margin-top:-10px;
+            text-align: center;
         }
     }
 
